# fununit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml  setup.py
src/funtest/: TestCase.py  TestSuite.py  UnitTest.py
src/funtest/adapters/: __init__.py
src/fununit/: TestCase.py  TestResult.py  TestSuite.py  UnitTest.py  _utils.py  run.py  utils.py
src/fununit/adapters/: unittest.py
